<resources>
    <string name="app_name">DataStreamCharts</string>
    <string name="etLogin">Login</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="tvCounter"></string>
    <string name="etykieta">Choose the components and type of chart to draw.</string>
    <string name="btnShow">SHOW</string>
    <string name="etykieta2">Extracting by date - TEMPERATURE and HUMIDITY.</string>
    <string name="cbTemperature">Temperature</string>
    <string name="cbHumidity">Humidity</string>
    <string name="tvPickerStart">date Start</string>
    <string name="tvPickerEnd">date End</string>
    <string name="tvPowitanie">Push the button below to choose the application\'s activity.</string>
    <string name="imageStart"> </string>
    <string name="stop_date">Stop Date</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="button"> ... </string>
    <string name="btnTemperature">Extract By Date</string>
    <string name="btnLineChart">LINE Chart</string>
    <string name="btnBarChart">BAR Chart</string>
    <string name="start_date">Start Date</string>
    <string name="tvRegister">New User - Register</string>
    <string name="tvForgotPass">Forgot Password?</string>
    <string name="etUserName">Name</string>
    <string name="etUserEmail">E-mail</string>
    <string name="etUserPassword">Password</string>
    <string name="btnRegister">Register</string>
    <string name="tvAlreadyRegistered">Already Registered - Back to Login.</string>
    <string name="btnPasswordReset">RESET Password</string>
    <string name="btnSend">Send to server</string>
    <string name="btnArchive">Custom data chart</string>
    <string name="tvEtykietaArchive">Retrive data from Firebase.</string>
    <string name="cbDataset1">Dataset 1</string>
    <string name="cbDataset2">Dataset 2</string>
    <string name="etAxisX">axis X...</string>
    <string name="etAxisY">axis Y...</string>
    <string name="btnInsert">Insert</string>
    <string name="btnClear">clear before adding new values</string>
    <string name="etUnit">unit</string>
    <string name="btnRetrive">Retrive from Firebase</string>
    <string name="tvRetriveLabel">Click on the button RETRIVE to fetch data from Firebase</string>
    <string name="etDataSetRetriveLabel">DataSet Label</string>
    <string name="btnRetriveFromFirebase">RETRIVE</string>






    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acton_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="export">Export</string>

</resources>
