<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/extractByDateMainContiner"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorDateExtract"
    android:clickable="true"
    android:focusable="true">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/etykieta2"
            android:layout_width="366dp"
            android:layout_height="76dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/etykieta2"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="173dp" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="149dp"
            android:layout_height="73dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/btnShow"
            android:textSize="16sp"
            android:backgroundTint="@color/colorButtons"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.178" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="533dp" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/start_date"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/stop_date"
            app:layout_constraintEnd_toStartOf="@+id/btnDateStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/stop_date"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/stop_date"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/btnDateStop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/start_time"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/stop_time"
            app:layout_constraintEnd_toStartOf="@+id/btnTimeStart"
            app:layout_constraintStart_toEndOf="@+id/btnDateStart"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/stop_time"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/stop_time"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/btnTimeStop"
            app:layout_constraintStart_toEndOf="@+id/btnDateStop"
            app:layout_constraintTop_toBottomOf="@+id/start_time" />

        <Button
            android:id="@+id/btnDateStart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/button"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnDateStop"
            app:layout_constraintEnd_toStartOf="@+id/start_time"
            app:layout_constraintStart_toEndOf="@+id/start_date"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/btnDateStop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/button"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/stop_time"
            app:layout_constraintStart_toEndOf="@+id/stop_date"
            app:layout_constraintTop_toBottomOf="@+id/btnDateStart" />

        <Button
            android:id="@+id/btnTimeStart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/button"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnTimeStop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_time"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/btnTimeStop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/button"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stop_time"
            app:layout_constraintTop_toBottomOf="@+id/btnTimeStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="420dp" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
